syntax="proto3";

package proto;

option go_package = "/proto";

/* Request & Response */
message AddRequest{
    int32 x = 1;
    int32 y = 2;
}

message AddResponse{
    int32 sum = 1;
}

/* Server Streaming */
message PrimeRequest{
    int32 start = 1;
    int32 end = 2;
}

message PrimeResponse{
    int32 primeNo = 1;
}

/* Client Streaming */
message AverageRequest{
    int32 num = 1;
}

message AverageResponse{
    int32 average = 1;
}

/* Bidirectional streaming */
/* Bidirectional Streaming */
message User{
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest{
    User user = 1;
}

message GreetResponse{
    string message = 1;
}


service AppService{

    /* request & response */
    rpc Add(AddRequest) returns (AddResponse);

    /* server streaming */
    rpc GeneratePrime(PrimeRequest) returns (stream PrimeResponse);

    /* client streaming */
    rpc CalculateAverage(stream AverageRequest) returns (AverageResponse);

    //Bidirectional Streaming
    rpc GreetEveryone(stream GreetRequest) returns(stream GreetResponse);
}


